gcc/testsuite/rust/rustc/ui/attributes/unused-item-in-attr.rs
#[w = { extern crate alloc; }]
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
fn f() {}

fn main() {}

